<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.setting.SettingActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/app_bar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/app_bar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorSurface"
			app:navigationIcon="@drawable/baseline_arrow_back_24"
			app:title="Settings"
			app:titleTextAppearance="?attr/textAppearanceTitleMedium" />
	</com.google.android.material.appbar.AppBarLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textFieldResultLimit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:gravity="center_horizontal"
		android:hint="@string/result_limit"
		android:paddingHorizontal="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:imeOptions="actionNext"
			android:inputType="number" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textFieldSearchLimit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="100dp"
		android:gravity="center_horizontal"
		android:hint="@string/search_limit"
		android:paddingHorizontal="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:imeOptions="actionNext"
			android:inputType="number" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textFieldFollowersLimit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="184dp"
		android:layout_marginBottom="16dp"
		android:gravity="center_horizontal"
		android:hint="@string/followers_limit"
		android:paddingHorizontal="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:imeOptions="actionNext"
			android:inputType="number" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/textFieldFollowingLimit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="268dp"
		android:gravity="center_horizontal"
		android:hint="@string/following_limit"
		android:paddingHorizontal="16dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:imeOptions="actionDone"
			android:inputType="number" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.switchmaterial.SwitchMaterial
		android:id="@+id/switch_theme"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="356dp"
		android:text="@string/dark_mode"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>
